--- a/styles/styles_mobi.css
+++ b/styles/styles_mobi.css
@@ -60,6 +60,13 @@ p.w2e_Standard {
     margin:0em;
 }
 
+p.w2e_Standard_margin_top {
+    text-indent:-1em;
+    padding-left:1em;
+    margin:0em;
+    margin-top:1em;
+}
+
 p.w2e_Schauplatz {
     text-align:center;
     font-size:1.2em;
